tests/integration/pilot/tunneling/sidecar/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-tunneling-sidecar
spec:
  hosts:
  - external-app.testdomain
  gateways:
  - mesh
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: external-forward-proxy.testdomain
        subset: external-app-8080
        port:
          number: 3128
  tls:
  - match:
    - sniHosts:
      - external-app.testdomain
      port: 443
    route:
    - destination:
        host: external-forward-proxy.testdomain
        subset: external-app-443
        port:
          number: 3128
